prod-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: stable
  labels:
    name: stable-service
    app: pyredisapp
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: pyapp-prod-pod
    app: pyredisapp
    track: stable
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp-prod-deployment
  labels:
    app: pyredisapp
spec:
  replicas: $PROD_REPLICAS
  selector:
    matchLabels:
      name: pyapp-prod-pod
      track: stable
  template:
    metadata:
      name: pyapp-prod-pod
      labels:
        name: pyapp-prod-pod
        app: pyredisapp
        track: stable
    spec:
      containers:
      - name: pyapp-prod-container
        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
        ports:
        - containerPort: 80
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: redis
#   labels:
#     name: redis-service
#     app: pyredisapp
# spec:
#   ports:
#   - port: 6379
#     targetPort: 6379
#   selector:
#     name: redis-pod
#     app: pyredisapp
# ---    
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: redis-deployment
#   labels:
#     app: pyredisapp
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       name: redis-pod
#       app: pyredisapp
#   template:
#     metadata:
#       name: redis-pod
#       labels:
#         name: redis-pod
#         app: pyredisapp
#     spec:
#       containers:
#       - name: redis
#         image: redis
#         ports:
#         - containerPort: 6379
